Add source links for the webslides+pygments demo

--- a/resources/public/webslides-pygments-demo/index.html
+++ b/resources/public/webslides-pygments-demo/index.html
@@ -53,6 +53,7 @@
           <div class="wrap aligncenter">
             <h1><strong>Webslides with Pygments</strong></h1>
             <p><a href="/webslides-syntax-highlighting/">Read the post</a></p>
+            <p><a href="https://github.com/cjohansen/cjohansen-no/tree/master/resources/public/webslides-pygments-demo">Source for these slides</a></p>
           </div>
         </section>
         <section>
@@ -127,8 +128,7 @@ done
 echo "$(date) Reload haproxy" >> /var/log/letsencrypt-renew.log
 /usr/bin/docker kill -s HUP cirice-load-balancer
 
-echo "$(date) Done" >> /var/log/letsencrypt-renew.log
-</code></pre>
+echo "$(date) Done" >> /var/log/letsencrypt-renew.log</code></pre>
           </div>
         </section>
       </article>
