Relative paths are hard

--- a/resources/public/yahtzee/index.html
+++ b/resources/public/yahtzee/index.html
@@ -4,10 +4,10 @@
     <title>Yahtzee</title>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width, viewport-fit=cover">
-    <link rel="stylesheet" type="text/css" href="/yahtzee.css">
+    <link rel="stylesheet" type="text/css" href="yahtzee.css">
   </head>
   <body>
     <div id="app"></div>
-    <script src="/yahtzee.js"></script>
+    <script src="yahtzee.js"></script>
   </body>
 </html>
