Add some more text content elements

--- a/ui/resources/public/index.html
+++ b/ui/resources/public/index.html
@@ -9,7 +9,7 @@
       body .com-rigsomelight-devcards-card-base-no-pad {background: #f7fafc;}
       .cljs-logo {display:none !important;}
     </style>
-    <link href="https://fonts.googleapis.com/css?family=Lato|Source+Sans+Pro|Source+Code+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato|Source+Sans+Pro|Source+Code+Pro|Source+Serif+Pro&display=swap" rel="stylesheet">
     <link href="/css/cjohansen.css" rel="stylesheet" type="text/css">
     <link href="/css/devcards.css" rel="stylesheet" type="text/css">
   </head>
