--- a/resources/public/webslides-pygments-demo/index.html
+++ b/resources/public/webslides-pygments-demo/index.html
@@ -6,9 +6,9 @@
     <title>Webslides Pygments Demo</title>
     <meta name="description" content="Syntax highlighting Webslides with Pygments">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,700,700i%7CMaitree:200,300,400,600,700&amp;subset=latin-ext" rel="stylesheet">
-    <link rel="stylesheet" type='text/css' media='all' href="static/css/webslides.css">
-    <link rel="stylesheet" type='text/css' media='all' href="static/css/svg-icons.css">
-    <link rel="stylesheet" type='text/css' media='all' href="static/css/prism.css">
+    <link rel="stylesheet" type='text/css' media='all' href="webslides.css">
+    <link rel="stylesheet" type='text/css' media='all' href="svg-icons.css">
+    <link rel="stylesheet" type='text/css' media='all' href="prism.css">
     <meta property="og:url" content="https://cjohansen.no/webslides-pygments-demo/">
     <meta property="og:type" content="article">
     <meta property="og:title" content="Syntax highlighting Webslides with Pygments">
@@ -134,12 +134,12 @@ echo "$(date) Done" >> /var/log/letsencrypt-renew.log</code></pre>
       </article>
     </main>
 
-    <script src="static/js/prism.js"></script>
-    <script src="static/js/webslides.js"></script>
+    <script src="prism.js"></script>
+    <script src="webslides.js"></script>
     <script>
       window.ws = new WebSlides();
     </script>
 
-    <script defer src="static/js/svg-icons.js"></script>
+    <script defer src="svg-icons.js"></script>
   </body>
 </html>
